--- a/src/resources/lang/ru.json
+++ b/src/resources/lang/ru.json
@@ -1,3 +1,17 @@
 {
-    "Save order": "Сохранить сортировку"
+    "Save order": "Сохранить сортировку",
+
+    "Hello!": "Здравствуйте!",
+    "Regards": "С уважением",
+    "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Если у вас возникли проблемы с нажатием кнопки \":actionText\", скопируйте и вставьте URL-адрес ниже \nв свой веб-браузер:",
+
+    "Verify Email Address": "Подтвердить адрес электронной почты",
+    "Please click the button below to verify your email address.": "Пожалуйста, нажмите кнопку ниже, чтобы подтвердить свой адрес электронной почты.",
+    "If you did not create an account, no further action is required.": "Если вы не создавали учетную запись, никаких дальнейших действий не требуется.",
+
+    "Reset Password Notification": "Запрос сброса пароля",
+    "You are receiving this email because we received a password reset request for your account.": "Вы получили это письмо, потому что мы получили запрос на сброс пароля для вашей учетной записи.",
+    "Reset Password": "Сбросить пароль",
+    "This password reset link will expire in :count minutes.": "Срок действия ссылки для сброса пароля истечет через :count минут.",
+    "If you did not request a password reset, no further action is required.": "Если вы не запрашивали сброс пароля, никаких дальнейших действий не требуется."
 }
